--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,25 @@ server {
     listen 8080;
     server_name localhost;
 
+    # --- IP WHITELISTING LOGIC ---
+    set $is_allowed 0;
+
+    # Allow Abu Dhabi (IPv4 & IPv6) and Cairo (IPv4) IPs via Cloud Run Proxy
+    if ($http_x_forwarded_for ~* "(5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175)") {
+        set $is_allowed 1;
+    }
+    
+    # Allow local development and direct hits from whitelisted IPs
+    if ($remote_addr ~* "(127\.0\.0\.1|::1|5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175)") {
+        set $is_allowed 1;
+    }
+
+    # Block all other traffic with a 403 Forbidden
+    if ($is_allowed = 0) {
+        return 403 "Forbidden: Access restricted to DEC Corporate Network";
+    }
+    # -----------------------------
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
