--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,18 @@ server {
     }
     # -----------------------------
 
+    location /zoho-accounts/ {
+        proxy_pass https://accounts.zoho.com/;
+        proxy_set_header Host accounts.zoho.com;
+        proxy_ssl_server_name on;
+    }
+
+    location /zoho-mail/ {
+        proxy_pass https://mail.zoho.com/;
+        proxy_set_header Host mail.zoho.com;
+        proxy_ssl_server_name on;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
