--- a/nginx.conf
+++ b/nginx.conf
@@ -6,12 +6,12 @@ server {
     set $is_allowed 0;
 
     # Allow Abu Dhabi (IPv4 & IPv6) and Cairo (IPv4) IPs via Cloud Run Proxy
-    if ($http_x_forwarded_for ~* "(5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175)") {
+    if ($http_x_forwarded_for ~* "(5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175|156\.213\.146\.94)") {
         set $is_allowed 1;
     }
     
     # Allow local development and direct hits from whitelisted IPs
-    if ($remote_addr ~* "(127\.0\.0\.1|::1|5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175)") {
+    if ($remote_addr ~* "(127\.0\.0\.1|::1|5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175|156\.213\.146\.94)") {
         set $is_allowed 1;
     }
 
