--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "node scripts/generate-version.mjs && vite",
+    "build": "node scripts/generate-version.mjs && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
