--- a/nginx.conf
+++ b/nginx.conf
@@ -6,18 +6,19 @@ server {
     set $is_allowed 0;
 
     # Allow Abu Dhabi (IPv4 & IPv6) and Cairo (IPv4) IPs via Cloud Run Proxy
-    if ($http_x_forwarded_for ~* "(5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175|156\.213\.146\.94|41\.41\.16\.228|41\.41\.)") {
+    if ($http_x_forwarded_for ~* "(5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175|156\.213\.146\.94|41\.41\.16\.228|41\.41\.|197\.52\.197\.176)") {
         set $is_allowed 1;
     }
     
     # Allow local development and direct hits from whitelisted IPs
-    if ($remote_addr ~* "(127\.0\.0\.1|::1|5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175|156\.213\.146\.94|41\.41\.16\.228|41\.41\.)") {
+    if ($remote_addr ~* "(127\.0\.0\.1|::1|5\.192\.130\.15|2001:4860:7:232::fe|156\.204\.219\.175|156\.213\.146\.94|41\.41\.16\.228|41\.41\.|197\.52\.197\.176)") {
         set $is_allowed 1;
     }
 
-    # Block all other traffic with a 403 Forbidden
+    # Block all other traffic with a proper 403 page
     if ($is_allowed = 0) {
-        return 403 "Forbidden: Access restricted to DEC Corporate Network";
+        return 403 "<html><head><title>403 Forbidden</title></head><body style='background:#121212;color:#eee;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;'><div><h1>403 Forbidden</h1><p>Access restricted to DEC Corporate Network.</p></div></body></html>";
+        add_header Content-Type text/html;
     }
     # -----------------------------
 
