fix(deploy): fix nginx syntax and refactor 403 handling for production reliability

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,12 +15,20 @@ server {
         set $is_allowed 1;
     }
 
-    # Block all other traffic with a proper 403 page
+    # Block all other traffic with a 403 Forbidden
     if ($is_allowed = 0) {
-        return 403 "<html><head><title>403 Forbidden</title></head><body style='background:#121212;color:#eee;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;'><div><h1>403 Forbidden</h1><p>Access restricted to DEC Corporate Network.</p></div></body></html>";
-        add_header Content-Type text/html;
+        return 403;
     }
     # -----------------------------
+
+    error_page 403 /403.html;
+    location = /403.html {
+        root /usr/share/nginx/html;
+        internal;
+        # Inline the HTML content to avoid needing an extra file in the image
+        return 200 "<html><head><title>403 Forbidden</title></head><body style='background:#121212;color:#eee;font-family:sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;'><div><h1>403 Forbidden</h1><p>Access restricted to DEC Corporate Network.</p></div></body></html>";
+        add_header Content-Type text/html;
+    }
 
     location /zoho-accounts/ {
         proxy_pass https://accounts.zoho.com/;
