--- a/package.json
+++ b/package.json
@@ -46,5 +46,11 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.3.1"
+  },
+  "overrides": {
+    "tough-cookie": "^4.1.3",
+    "qs": "^6.14.1",
+    "fast-xml-parser": "^5.4.1",
+    "form-data": "^4.0.1"
   }
 }
